# alice_time_tracker

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .vercelignore  Dockerfile  Procfile  README.md  api.py  app.py  cascade.py  form.py  index.py  main.py  pyproject.toml  r_example.json  request_example.json  requirements.txt  response_example.json  services.py
forms/: form.yaml
models/: custom.py  request.py  response.py
