[tool.poetry]
name = "alice_time_tracker"
version = "0.1.0"
description = ""
authors = ["Korzunin Dmitry <dakorzunin@sberbank.ru>"]

[tool.poetry.dependencies]
python = "3.7.3"
fastapi = "^0.68.1"
Flask = "0.12.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
