[tool.poetry]
name = "alice_time_tracker"
version = "0.1.0"
description = ""
authors = ["Korzunin Dmitry <dakorzunin@sberbank.ru>"]

[tool.poetry.dependencies]
python = "3.10.0"
fastapi = "^0.68.1"
Flask = "0.12.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.15.0"
datamodel-code-generator = "^0.11.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
